# switchfleet

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260530_0001_enterprise_tables.py  20260530_0002_password_change_workflow.py  20260530_0003_lab_validation_framework.py  20260530_0004_inventory_onboarding.py  20260531_0005_config_backup_scheduling.py  20260531_0006_vlan_workflow_hardening.py  20260531_0007_change_execution_orchestrator.py  20260602_0008_driver_real_apply_readiness.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/core/: config.py  crypto.py  exceptions.py  logging.py  rbac.py  secret_crypto.py  security.py  transport_strategy.py  vendor_driver_contracts.py
app/db/: base.py  session.py  types.py
app/drivers/: __init__.py  base.py  bulat_bs.py  cisco_ios.py  dell_powerconnect.py  eltex_mes.py  generic_ssh.py  hp_comware.py  hpe_procurve.py  huawei_vrp.py  readonly_icmp.py  registry.py
app/jobs/: celery_app.py  executors.py  tasks.py
app/repositories/: __init__.py  audit.py  backups.py  change_executions.py  config_backups.py  config_restore_plans.py  config_snapshots.py  credential_vault.py  credentials.py  device_inventory.py  devices.py  inventory_imports.py  job_tasks.py  jobs.py  lab_validation_checklists.py  lab_validation_transcripts.py  lab_validations.py  locks.py  observability.py  operator_console.py  password_change_secrets.py  password_rollout.py  vlan_workflows.py
app/schemas/: acl.py  audit.py  backup.py  change_execution.py  config_backup.py  credential.py  credential_vault.py  device.py  driver_runtime.py  inventory.py  job.py  lab_apply.py  lab_validation.py  observability.py  operator_console.py  port.py  vlan.py  vlan_workflow.py
app/services/: apply_safety_kernel.py  approval_service.py  audit_service.py  backup_service.py  change_execution_plan_service.py  change_execution_service.py  change_execution_simulation_service.py  change_execution_validation_service.py  change_planner.py  config_backup_service.py  config_diff_service.py  config_restore_service.py  credential_service.py  credential_vault_service.py  credential_verification_service.py  device_discovery_service.py  device_normalizer.py  device_service.py  driver_capability_matrix.py  driver_resolver.py  driver_runtime_service.py  excel_inventory.py  excel_lab_runtime.py  excel_lab_safety.py  fake_lab_transport.py  file_credential_vault.py  file_lab_state.py  inventory_import_service.py  inventory_parser.py  inventory_validation_service.py  job_service.py  lab_apply_service.py  lab_backup_runner.py  lab_transport_factory.py  lab_validation_service.py  lock_service.py  observability_service.py  operator_console_service.py  password_change_service.py  password_rollout_service.py  (+9 more)
app/transports/: base.py  (+4 more)
docs/: architecture.md  change-execution-orchestrator.md  config-backup-scheduling.md  driver-real-apply-readiness.md  enterprise-platform.md  inventory-onboarding.md  lab-validation-framework.md  lab-validation.md  local-working-version-checklist.md  observability-audit-reporting.md  operator-console-backend.md  password-change-rollout.md  runnable-lab-prototype.md  transport-strategy-driver-runtime.md  vendor-support-matrix.md  vlan-workflow-hardening.md
scripts/: README.md  __init__.py  build-release-bundles.ps1  excel_lab.py  lab_prototype.py
tests/: test_backup.py  test_drivers.py  test_plan_io.py  test_transports.py
(+240 files in other folders)
