[project]
name = "netops-orchestrator"
version = "0.1.0"
description = "Enterprise network equipment orchestration with first-party CLI drivers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "paramiko>=3.4",
]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]
dev = []

[project.scripts]
netops = "netops_orchestrator.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
