[project]
name = "netops-orchestrator"
version = "0.2.0"
description = "Enterprise network equipment orchestration with first-party CLI drivers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13",
  "celery>=5.4",
  "cryptography>=42",
  "fastapi>=0.115",
  "jinja2>=3.1",
  "netmiko>=4.4",
  "openpyxl>=3.1",
  "paramiko>=3.4",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "redis>=5",
  "scrapli>=2024.7.30",
  "sqlalchemy>=2.0",
  "structlog>=24.4",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
]
xlsx = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["celery.*", "openpyxl.*"]
ignore_missing_imports = true

[project.scripts]
netops = "netops_orchestrator.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["app*", "netops_orchestrator*"]

[tool.setuptools.package-data]
app = ["templates/**/*.j2"]
