[project]
name = "netops-orchestrator"
version = "0.3.0"
description = "Excel-first local switch administration with optional enterprise orchestration APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42",
  "jinja2>=3.1",
  "netmiko>=4.4",
  "openpyxl>=3.1",
  "paramiko>=3.4",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "structlog>=24.4",
]

[project.optional-dependencies]
enterprise = [
  "alembic>=1.13",
  "celery>=5.4",
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "redis>=5",
  "scrapli>=2024.7.30",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]
dev = [
  "alembic>=1.13",
  "celery>=5.4",
  "fastapi>=0.115",
  "httpx>=0.27",
  "mypy>=1.11",
  "playwright>=1.45",
  "psycopg[binary]>=3.2",
  "pytest>=8.3",
  "redis>=5",
  "ruff>=0.6",
  "scrapli>=2024.7.30",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "e2e: tests that drive an external browser and may require network access",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["celery.*", "openpyxl.*"]
ignore_missing_imports = true

[project.scripts]
netops = "netops_orchestrator.cli:main"
switchfleet = "scripts.excel_lab:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["app*", "netops_orchestrator*", "scripts*"]

[tool.setuptools.package-data]
app = ["templates/**/*.j2"]
